[package]
name = "ss"
version = "0.1.0"
edition = "2021"

[dependencies]
io-uring = "0.5"
thiserror = "1.0"
libc = { version = "0.2.98", default-features = false }
rlimit = "0.8"
bytes = "1"
atoi = "1"


polling = "2"
rustc-hash = "1"
nix = "0.23"
scoped-tls = "1"
futures = "0.3"
waker-fn = "1"
pin-utils = "0.1"
socket2 = "0.4"
tokio = {version = "1", features = ["io-util"]}